# export-wandb-to-mlflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
export_wandb_to_mlflow/: __init__.py  dry_run_utils.py  main.py  mlflow_utils.py
export_wandb_to_mlflow/config/: __init__.py
export_wandb_to_mlflow/convert/: metrics.py  params.py  system_metrics.py
export_wandb_to_mlflow/remedy/: get_crash_state.py
scripts/: upload_file_to_databricks_uc.py
shell/: count_rows.sh  migrate_multiple_projects.sh
src/: main.py  mlflow_utils.py
src/config/: mlflow_config.py
src/convert/: metrics.py  params.py  system_metrics.py
